database-daployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-database-deployment
  namespace: k8s-project 
spec:
  selector:
    matchLabels:
      component: mssql
  strategy:
    type : Recreate
  template:
    metadata: 
      labels:
        component: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 1433
          volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mssql-persistent-volume-claim
