mssql-database-statefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-statefulset
  namespace: k8s-project
spec:
  replicas: 1
  serviceName: mssql-database-service
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            claimName: mssql-persistent-volume-claim
      containers:
        - name: mysql
          image: mcr.microsoft.com/mssql/server:latest
          ports:
            - containerPort: 1433
