ticketApp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-application-deployment
  namespace: k8s-project
spec:
  replicas: 3
  selector:
    matchLabels:
      component: ticketapp
  template:
    metadata:
      labels:
        component: ticketapp
    spec:
      containers:
        - name: ticket-app
          image: borjanob/ticket_app:regular
          ports: 
            - containerPort: 80
