database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mssql-database-service
  namespace: k8s-project
spec:
  type: ClusterIP
  selector:
    component: mssql
  ports: 
    - port: 1433
      targetPort: 1433
